# functional_monads.bs.py

./: .coveragerc  .gitignore  README.md  coverage.xml  junit.xml  pyproject.toml
.github/workflows/: ci.yml
src/functional_monads/: __init__.py  _version.py  either.py  maybe.py
tests/: test_either.py  test_maybe.py
