[build-system]
requires = ["hatchling", "version-pioneer"]
build-backend = "hatchling.build"

[project]
name = "functional-monads.bs.py"
requires-python = ">=3.13"
dynamic = ["version"]
description = "My private package from private github repo"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Tobias Bollinger", email = "tobias.bollinger@bs.ch" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Documentation = "https://github.com/DCC-BS/functional-monads.bs.py#readme"
Source = "https://github.com/DCC-BS/functional-monads.bs.py"


[tool.hatch.version]
source = "version-pioneer"

[tool.version-pioneer]
versionscript = "src/functional_monads/_version.py"  # Where to "read" the Version-Pioneer script (to execute `get_version_dict()`).
versionfile-sdist = "src/functional_monads/_version.py"  # Where to "write" the version dict for sdist.
versionfile-wheel = "functional_monads/_version.py"  # Where to "write" the version dict for wheel.

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hatch_demo tests}"

[tool.hatch.build.targets.wheel]
packages = ["src/functional_monads"]

[tool.hatch.build.targets.sdist]
include = [
    "src/functional_monads",
    "src/functional_monads/py.typed",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true